<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/stringInputIp1"
        style="@style/input_from_to_string">
        <EditText
            android:id="@+id/etIp1"
            android:hint="@string/enter_ip_from"
            style="@style/input_from_to_edit_text_ip">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stringInputIp2"
        style="@style/input_from_to_string">
        <EditText
            android:id="@+id/etIp2"
            android:hint="@string/enter_ip_to"
            style="@style/input_from_to_edit_text_ip">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputFrom"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvInputFrom"
            android:text="@string/from_port"
            style="@style/input_from_to_text_view">
        </TextView>
        <EditText
            android:id="@+id/etFrom"
            android:layout_height="wrap_content"
            style="@style/input_from_to_edit_text_port">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputTo"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvInputTo"
            android:text="@string/to_port"
            style="@style/input_from_to_text_view">
        </TextView>
        <EditText
            android:id="@+id/etTo"
            android:layout_height="wrap_content"
            style="@style/input_from_to_edit_text_port">
        </EditText>
    </LinearLayout>
</LinearLayout>