<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e4100443"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/stringDomain"
            style="@style/input_from_to_string">
            <TextView
                android:id="@+id/tvDomain"
                android:text="@string/domain"
                style="@style/input_from_to_edit_text_port">
            </TextView>
            <TextView
                android:id="@+id/etDomain"
                android:text="mail.ru"
                style="@style/input_from_to_text_view">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/inputFrom"
            android:layout_below="@+id/stringDomain"
            style="@style/input_from_to_string">
            <TextView
                android:id="@+id/tvInputFrom"
                android:text="@string/from_port"
                style="@style/input_from_to_edit_text_port">
            </TextView>
            <TextView
                android:id="@+id/etFrom"
                android:text="10"
                style="@style/input_from_to_text_view">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/inputTo"
            android:layout_below="@+id/inputFrom"
            style="@style/input_from_to_string">
            <TextView
                android:id="@+id/tvInputTo"
                android:text="@string/to_port"
                style="@style/input_from_to_edit_text_port">
            </TextView>
            <TextView
                android:id="@+id/etTo"
                android:text="80"
                style="@style/input_from_to_text_view">
            </TextView>
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/inputMode"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/inputTo"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvMode"
            android:text="@string/scan_mode"
            style="@style/input_from_to_edit_text_port">
        </TextView>
        <TextView
            android:id="@+id/etMode"
            android:text="stealth"
            style="@style/input_from_to_text_view">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/inputLoad"
        android:layout_below="@+id/inputMode"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvLoad"
            android:text="@string/load"
            style="@style/input_from_to_edit_text_port">
        </TextView>
        <TextView
            android:id="@+id/etLoad"
            android:text="slow"
            style="@style/input_from_to_text_view">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/inputScan"
        android:layout_below="@+id/inputLoad"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvScan"
            android:text="@string/scan"
            style="@style/input_from_to_edit_text_port">
        </TextView>
        <TextView
            android:id="@+id/etScan"
            android:text="quick"
            style="@style/input_from_to_text_view">
        </TextView>
    </RelativeLayout>

</RelativeLayout>