<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e4100443"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearLayout9"
            style="@style/input_from_to_string">
            <TextView
                android:id="@+id/tvResult1"
                android:text="@string/entered_domain"
                style="@style/input_from_to_entered_domain_or_ip">
            </TextView>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/inputFrom"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvInputFrom"
            android:text="@string/from_port"
            style="@style/input_from_to_text_view">
        </TextView>
        <EditText
            android:id="@+id/etFrom"
            style="@style/input_from_to_edit_text_port">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputTo"
        style="@style/input_from_to_string">
        <TextView
            android:id="@+id/tvInputTo"
            android:text="@string/to_port"
            style="@style/input_from_to_text_view">
        </TextView>
        <EditText
            android:id="@+id/etTo"
            style="@style/input_from_to_edit_text_port">
        </EditText>
    </LinearLayout>
    </LinearLayout>
    <include
        layout="@layout/fragment_spinners_input_value"
        android:layout_below="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/btnScanAgain"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/btnScanAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/scan_again">
    </Button>
</RelativeLayout>
